OO-8318: add filter pseudo status done, issue casting invoice